Changes to Makefile to make consistently. Other general clean up of the directory structure.

--- a/39470A2/Makefile
+++ b/39470A2/Makefile
@@ -17,6 +17,8 @@
 # systems. Find the one which matches your OS and outcomment the 
 # lines below.
 
+include ../Makefile.inc
+
 # This is for Linux ----------------
 #LIBS = -lbsd -lm -lutil
 LIBS= -lm -lutil -lpthread -lrt
@@ -38,11 +40,6 @@ OSFLAGS = -DOS_LINUX # -DOS_CYGWIN
 # The following lines define direcories. Adjust if necessary
 #                 
 
-
-INC_DIR 	= $(MIDASSYS)/include
-LIB_DIR 	= $(MIDASSYS)/linux/lib
-DRV_DIR		= .
-
 #-------------------------------------------------------------------
 # Drivers needed by the frontend program
 #                 
@@ -52,22 +49,22 @@ DRIVERS         = rs232.o
 # Lines below here should not be edited
 ####################################################################
 
-LIB = $(LIB_DIR)/libmidas.a
+LIB = $(MIDASLIBDIR)/libmidas.a
 
 # compiler
 CC = cc
-CFLAGS = -g -I$(INC_DIR) -I$(DRV_DIR) $(USERFLAGS)
+CFLAGS += -g -I. -I$(MIDASINCDIR) $(OSFLAGS)
 LDFLAGS =
 TARGETS = THERfe mtest
 
 .PHONY: all clean
 all:  $(TARGETS)
 
-THERfe:  $(LIB) $(LIB_DIR)/mfe.o frontend.o $(DRIVERS)
-	$(CC) -g -o THERfe frontend.o $(LIB_DIR)/mfe.o $(DRIVERS) $(LIB) $(LDFLAGS) $(LIBS)
+THERfe: frontend.o $(MIDASLIBDIR)/mfe.o $(DRIVERS) $(LIB)
+	$(CC) -g -o $@ $^ $(LDFLAGS) $(LIBS)
 
-mtest : mtest.c rs232.c
-	gcc -DOS_LINUX $(CFLAGS) -g -o mtest mtest.c rs232.c $(LIB) $(LDFLAGS) $(LIBS)
+mtest : mtest.o rs232.o $(LIB)
+	$(CC) -g -o $@ $^ $(LDFLAGS) $(LIBS)
 
 .c.o:
 	$(CC) $(CFLAGS) $(OSFLAGS) -c $<
